--- a/package.json
+++ b/package.json
@@ -1,27 +1,52 @@
 {
-  "name": "bashdemy-nextjs",
-  "version": "0.1.0",
+  "name": "bashdemy.github.io",
+  "version": "1.0.0",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=20.19.0"
+  },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/optimize-seo.js && next build && node scripts/strip-exif.js",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build",
+    "seo": "node scripts/optimize-seo.js",
+    "test-seo": "node scripts/test-seo.js",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "preview": "next start"
   },
   "dependencies": {
+    "lucide-react": "^0.525.0",
+    "next": "15.4.6",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.6",
+    "prettier": "^3.2.5",
+    "sharp": "^0.33.5",
+    "tailwindcss": "^4",
+    "terser": "^5.43.1",
+    "typescript": "^5"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{json,css,md}": "prettier --write"
   }
 }
