--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,15 +9,20 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/flower-icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "/profile-picture.JPG",
-      "sizes": "192x192",
-      "type": "image/jpeg"
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "categories": ["business", "productivity"],
