--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,14 @@ logs
 # Package managers
 pnpm-lock.yaml
 .pnpm-debug.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Cache directories
+.cache/
+.parcel-cache/
