--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test-seo": "node scripts/test-seo.js",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "preview": "next start"
+    "lint-staged": "lint-staged",
+    "preview": "next start",
+    "prepare": "husky"
   },
   "dependencies": {
     "lucide-react": "^0.525.0",
@@ -35,6 +37,8 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
     "sharp": "^0.33.5",
